wp_contextual/tests/error_both_wp_contextual_field_and_wp_contextual_option.stderr
error: #[WPContextualField] & #[WPContextualOption] can't be used together
 --> tests/error_both_wp_contextual_field_and_wp_contextual_option.rs:5:5
  |
5 |     #[WPContext(edit)]
  |     ^
